#16 イメージタグを最短一致に変更。

--- a/testcase/13.md.html
+++ b/testcase/13.md.html
@@ -36,4 +36,4 @@
 
 <h2>link</h2>
 
-<p><a href="link"><img src="path" alt="image" /></a></p>
+<p><a href="link"><img alt="image" src="path"></a></p>
