#23 テーブルの実装。

--- a/testcase/table.md.html
+++ b/testcase/table.md.html
@@ -1,8 +1,8 @@
 <table>
     <tr>
         <th align="center">th</th>
-        <th align="center">th</th>
-        <th align="center">th</th>
+        <th align="left">th</th>
+        <th align="right">th</th>
     </tr>
     <tr>
         <td align="center">td</td>
